--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 asn1crypto==0.24.0
+cachetools==2.1.0
 cffi==1.11.5
 cryptography==2.3.1
+httplib2==0.11.3
 idna==2.7
 IMDbPY==6.6
 lxml==4.2.5
+oauth2client==4.1.3
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
 pycparser==2.19
 PyMySQL==0.9.2
+rsa==4.0
 six==1.11.0
 SQLAlchemy==1.2.12
+uritemplate==3.0.0
